# fastapi-prod-template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Justfile  alembic.ini  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: lint.yml  static_check.yml
alembic/: env.py
app/: config.py  database.py  main.py  models.py
app/handlers/: api.py  migrate.py
infra/docker/: lambda.Dockerfile  local.Dockerfile
infra/docker-compose/: .env.local  base.yml  server.yml
